# superteam-academy

./: .env.example  README.md  package.json
programs/superteam-academy/: Cargo.toml
programs/superteam-academy/src/: lib.rs
src/app/: layout.tsx  page.tsx
src/app/courses/: page.tsx
src/app/courses/[slug]/: page.tsx
src/app/courses/[slug]/lessons/[lessonId]/: page.tsx
src/app/dashboard/: page.tsx
src/app/leaderboard/: page.tsx
src/components/: navbar.tsx  providers.tsx
src/lib/: courses-data.ts
src/lib/solana/: certificates.ts
