[package]
name = "superteam-academy"
version = "0.1.0"
description = "Superteam Academy LMS on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "superteam_academy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
